<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".CreateHabitsActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_title"
        android:inputType="text"
        android:hint="@string/enter_title"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_description"
        android:inputType="text"
        android:lines="2"
        android:hint="@string/enter_description"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choose_image_button"
        android:text="@string/choose_image"
        android:textSize="13sp"
        android:onClick="chooseImage"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/image_view"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:contentDescription="@string/selected_image"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save_image"
        android:onClick="storeHabit"
        android:text="@string/save"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/error_message"
        android:visibility="invisible"
        android:textColor="#880000"/>

</LinearLayout>